--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html lang="en">
 <head>
     
-    <title>Gallery</title>
+    <title>Assignment</title>
 </head>
 <body>
     
-    <center><h1 allign="center">Table of Contents</h1></center>
+    <center><h1 allign="center">Assignment SMIT</h1></center>
 
-        <a href="./admission form/admission form.html"> <h1>admission form </h1></a>
-        <a href="./preodic table/preodic table.html"> <h1>preodic table</h1></a>
-        <a href="./cv/cv.html"> <h1>cv </h1></a>
-        <a href="./gallery/galley.html"> <h1> gallery </h1></a>
-        <a href="./Pages/admission form.html"><h1>admission form </h1></a>
-        <a href="./Pages/preodic table.html"><h1>preodic table</h1></a>
-        <a href="./Pages/cv.html"> <h1>cv</h1></a>
-        <a href="./Pages/image.html"> <h1>gallery</h1></a>
+        <a href="./Pages/admission form/index.html"><h1>Admission form </h1></a>
+        <a href="./Pages/periodic table/index.html"><h1>Periodic table</h1></a>
+        <a href="./Pages/cv/index.html"> <h1>CV</h1></a>
+        <a href="./Pages/image/index.html"> <h1>Gallery</h1></a>
 </body>
 </html>
